Z-index fix No. 8156

--- a/source/_scss/partials/_playlist.scss
+++ b/source/_scss/partials/_playlist.scss
@@ -22,6 +22,7 @@
 
 .playlist__entry {
     position: relative;
+    z-index: 6;
     float: left;
     width: 60%;
     padding-top: 60%;
